syntax = "proto3";
option csharp_namespace = "GrpcClient";
package lager;

service Warehouse{
  rpc createProduct(ProductCreationRequest) returns (ProductCreationResponse);
}

message ProductCreationRequest {
  int32 ean = 1;
  string productName = 2;
  int32 stock = 3;
  string information = 4;
}

message ProductCreationResponse{
  bool created = 1;
}